5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4488/executions/1573_1333.log
== SUBMITION (2019-04-01 15:36:17) 
-- CODE:
expressao = (30-3**2+8//3*2*10)
print(expressao)
-- EXECUTION TIME:
0.143633
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
---- user output:
61
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 12:39:57) 
-- CODE:
expressao = (30-3**2+8//3*2*10)
print(expressao)
-- EXECUTION TIME:
0.204644
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
---- user output:
61
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 12:40:48) 
-- CODE:
expressao = (30-3**2+8//3*2*10)
print(expressao)
-- EXECUTION TIME:
0.136706
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
---- user output:
61
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 12:40:48) 
-- CODE:
expressao = (30-3**2+8//3*2*10)
print(expressao)
-- EXECUTION TIME:
0.115195
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
---- user output:
61
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 12:40:48) 
-- CODE:
expressao = (30-3**2+8//3*2*10)
print(expressao)
-- EXECUTION TIME:
0.109906
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
---- user output:
61
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 12:40:49) 
-- CODE:
expressao = (30-3**2+8//3*2*10)
print(expressao)
-- EXECUTION TIME:
0.110494
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
---- user output:
61
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 12:40:49) 
-- CODE:
expressao = (30-3**2+8//3*2*10)
print(expressao)
-- EXECUTION TIME:
0.100889
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
---- user output:
61
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 12:40:49) 
-- CODE:
expressao = (30-3**2+8//3*2*10)
print(expressao)
-- EXECUTION TIME:
0.0927331
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
---- user output:
61
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 12:40:49) 
-- CODE:
expressao = (30-3**2+8//3*2*10)
print(expressao)
-- EXECUTION TIME:
0.156351
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
---- user output:
61
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 12:40:49) 
-- CODE:
expressao = (30-3**2+8//3*2*10)
print(expressao)
-- OUTPUT:
61
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 12:40:50) 
-- CODE:
expressao = (30-3**2+8//3*2*10)
print(expressao)
-- OUTPUT:
61
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 12:40:50) 
-- CODE:
expressao = (30-3**2+8//3*2*10)
print(expressao)
-- OUTPUT:
61
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 12:40:50) 
-- CODE:
expressao = (30-3**2+8//3*2*10)
print(expressao)
-- OUTPUT:
61
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 12:43:27) 
-- CODE:
expressao = ((30-3)**2+8//3*2*10)
print(expressao)
-- EXECUTION TIME:
0.166615
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
---- user output:
769
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 12:43:36) 
-- CODE:
expressao = ((30-3)**2+8//3*2*10))
print(expressao)
-- EXECUTION TIME:
0.168256
-- ERROR:
  File "/home/codebench/codes/1573/1333/main.py", line 1
    expressao = ((30-3)**2+8//3*2*10))
                                     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 12:45:21) 
-- CODE:
expressao = ((30-3)**2(8//3**2*10)
print(expressao)
-- EXECUTION TIME:
0.173838
-- ERROR:
  File "/home/codebench/codes/1573/1333/main.py", line 2
    print(expressao)
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 12:45:45) 
-- CODE:
expressao = ((30-3)**2+8//3**2*10)
print(expressao)
-- EXECUTION TIME:
0.156104
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
---- user output:
729
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 12:45:46) 
-- CODE:
expressao = ((30-3)**2+8//3**2*10)
print(expressao)
-- EXECUTION TIME:
0.1299
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
---- user output:
729
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 12:45:46) 
-- CODE:
expressao = ((30-3)**2+8//3**2*10)
print(expressao)
-- EXECUTION TIME:
0.151009
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
---- user output:
729
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 12:45:46) 
-- CODE:
expressao = ((30-3)**2+8//3**2*10)
print(expressao)
-- EXECUTION TIME:
0.15286
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
---- user output:
729
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 12:45:58) 
-- CODE:
expressao = ((30-3)**2+8//(3)**2*10)
print(expressao)
-- EXECUTION TIME:
0.155996
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
---- user output:
729
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 12:45:59) 
-- CODE:
expressao = ((30-3)**2+8//(3)**2*10)
print(expressao)
-- EXECUTION TIME:
0.14337
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
---- user output:
729
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 12:45:59) 
-- CODE:
expressao = ((30-3)**2+8//(3)**2*10)
print(expressao)
-- EXECUTION TIME:
0.126496
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
---- user output:
729
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 12:45:59) 
-- CODE:
expressao = ((30-3)**2+8//(3)**2*10)
print(expressao)
-- EXECUTION TIME:
0.154775
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
---- user output:
729
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 12:45:59) 
-- CODE:
expressao = ((30-3)**2+8//(3)**2*10)
print(expressao)
-- EXECUTION TIME:
0.114261
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
---- user output:
729
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 12:46:00) 
-- CODE:
expressao = ((30-3)**2+8//(3)**2*10)
print(expressao)
-- EXECUTION TIME:
0.100864
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
---- user output:
729
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 12:46:00) 
-- CODE:
expressao = ((30-3)**2+8//(3)**2*10)
print(expressao)
-- EXECUTION TIME:
0.140628
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
---- user output:
729
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 12:46:00) 
-- CODE:
expressao = ((30-3)**2+8//(3)**2*10)
print(expressao)
-- EXECUTION TIME:
0.103479
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
---- user output:
729
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 12:46:00) 
-- CODE:
expressao = ((30-3)**2+8//(3)**2*10)
print(expressao)
-- EXECUTION TIME:
0.135802
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
---- user output:
729
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 12:46:01) 
-- CODE:
expressao = ((30-3)**2+8//(3)**2*10)
print(expressao)
-- EXECUTION TIME:
0.102899
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
---- user output:
729
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 12:46:12) 
-- CODE:
expressao = ((30-3)**2+8//(3**2)
				*10)
print(expressao)
-- EXECUTION TIME:
0.117319
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
---- user output:
729
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 12:46:16) 
-- CODE:
expressao = ((30-3)**2+8//(3**2)*10)
print(expressao)
-- EXECUTION TIME:
0.206536
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
---- user output:
729
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 12:46:20) 
-- CODE:
expressao = ((30-3)**2+8//(3**2*10)
print(expressao)
-- EXECUTION TIME:
0.185101
-- ERROR:
  File "/home/codebench/codes/1573/1333/main.py", line 2
    print(expressao)
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 12:46:21) 
-- CODE:
expressao = ((30-3)**2+8//(3**2*10)
print(expressao)
-- ERROR:
File "XXXX", line 2
    print(expressao)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 12:47:18) 
-- CODE:
expressao = (30-3 ** 2 + 8 // 3 ** 2 * 10)
print(expressao)
-- EXECUTION TIME:
0.235114
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
---- user output:
21
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
